style.css
*{
    box-sizing: border-box;
}
body {
    background-color: #F3F3F3;
    font-family: roboto, sans-serif;
    font-weight: 400;
}

/*HEADER*/
header {
    background-color: #ffffff;
    display: flex;
    width: 100%;
    height: 80px;
    box-shadow: 0px 4px 6px #0000000D;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    top: 0;
    left: 0;
}

header img:first-of-type {
    width: 75px;
    height: 53px;
    margin-left: 22px;
}

header img:last-of-type {
    width: 42.19px;
    height: 30.94px;
    margin-right: 22.41px;
}

/*MAIN*/
main {
    width: 100%;
    margin-top: 80px;
}

main>div {
    background-color: red;
    width: 100%;
    min-height: 40px;
    height: fit-content;
    display: flex;
    padding-left: 8px;
    padding-right: 8px;
    padding-top: 12px;
    padding-bottom: 12px;
    flex-wrap: wrap;
    align-items: center;
    border-radius: 3px;
}

main div p {
    font-family: roboto, sans-serif;
    font-weight: 400;
    font-size: 14px;
    line-height: 20px;
}

main div p span {
    color: #AAAAAA;
}

main div p b {
    font-weight: 700;
}

/*FOOTER*/
footer {
    background-color: #ffffff;
    box-shadow: 0px -4px 6px #0000000D;
    width: 100%;
    height: 80px;
    position: fixed;
    bottom: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
}

footer input {
    height: 100%;
    width: 100%;
    padding-left: 17px;
    border: 0;
}

textarea:focus,
input:focus,
select:focus {
    box-shadow: 0 0 0 0;
    border: 0 none;
    outline: 0;
}

footer input::-webkit-input-placeholder {
    color: #000000;
    font-family: roboto, sans-serif;
    font-weight: 400;
    font-size: 18px;
    line-height: 21.09px;
    font-style: italic;
}

footer input:focus::-webkit-input-placeholder {
    color: transparent;
}

footer input:-moz-placeholder {
    color: #000000;
    font-family: roboto, sans-serif;
    font-weight: 400;
    font-size: 18px;
    font-style: italic;
    line-height: 21.09px;
}

footer input:focus::-moz-placeholder {
    color: transparent;
}

footer button {
    height: 80px;
    width: 64px;
    border: 0;
    background-color: #ffffff;
}

footer button img {
    width: 26px;
    height: 26px;
}

